@@ -1,3 +1,5 @@
+* Ensure native_api() returns an array of results for className selectors instead of nodeLists. [jddalton]
+
 * Remove unnecessary grouping from `strSkipQuotes` and remove the `*` from the end of the `Optimize` regexps. [jddalton] 
 
 * Avoid prefiltering in client_api() if the selector contains `:not` and move the `ID optimization LTR` block under the `ID optimization RTL` block. [jddalton]
